Ram17Compiler/test_programs/lexer/fail/fail10.ram17
class AnotherFail {
public static void main (String[] args){
    integer x = 10%2;
}
// This will fail due to modulus